@@ -1,3 +1,7 @@
+2011-10-26:
+	* (mhatle) update clone wrapper to add an intermediate function
+	  to avoid setting environment variables in the parent.
+
 2011-10-20:
 	* (mhatle) change from internal PSEUDO_RELOADED to external
 	  PSEUDO_UNLOAD environment variable.  Enable external programs
